- Fix nav alignment; - Restore custom Tooltip; - Fix test not passing;

--- a/src/index.css
+++ b/src/index.css
@@ -17,12 +17,22 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.App {
+	text-align: center;
+	background-color: #2e2d2e;
+	height: 100vh;
+}
+
 .Card {
 	transition: all 1000ms ease-out;
 }
 .CardButton {
-	background-color: rgba(11, 10, 12, 0.5);
-	/*position: absolute;*/
 	top: 0;
 	left: 50%;
 	transform: translate(-50%, -50%);
@@ -40,6 +50,9 @@ code {
 	opacity: 0;
 }
 .ShuffleButton {
+	display:grid;
+	grid-template-columns: 50px 1fr;
+	grid-column-gap:5px;
 	background: linear-gradient(90deg, #495aff, #0acffe);
 	padding: 18px;
 }
@@ -52,6 +65,38 @@ code {
 	
 }
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+.Nav {
+	display: flex;
+	align-items: flex-start;
+	justify-content: flex-end;
+}
+.Nav_button {
+	flex-shrink: 0;
+}
+
+.tooltip {
+	display:flex;
+	position: absolute;
+	background-color: rgba(11, 10, 12, 0.5);
+	padding:10px;
+	color: cornsilk;
+	text-transform:uppercase;
+	font-weight:bold;
+	font-size: 16px;
+	border-radius: 5px;
+	opacity: 1;
+	margin-top:11px;
+	/*left: 50%;*/
+	/*transform: translate(-50%, 0);*/
+}
+.tooltip:after {
+	content: '';
+	position:absolute;
+	top:-10px;
+	left:10px;
+	width:0;
+	height:0;
+	border-left: 10px solid transparent;
+	border-right: 10px solid transparent;
+	border-bottom: 10px solid rgba(11, 10, 12, 0.5);
+}
